--- a/index.html
+++ b/index.html
@@ -413,7 +413,8 @@ Edit (May 13, 2020): I removed some things for ~ aesthetic ~'s sake -->
 <!--Javascript: Start!-->
 <div class="row">
   <div class="col">
-    
+
+    <h1 style="color:#ff99cc">Javascript, baby!</h1>
     <!--Javascript: Interaction w/ User!-->
     <button onclick="greet()">Get greeted.</button>
 
