--- a/index.html
+++ b/index.html
@@ -679,6 +679,43 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 
  </div>
   </div>
+ 
+ <!--Javascript-->
+ <div class="row">
+  <div class="col">
+   <h1 style="color:Violet;">Javascript</h1>
+ 
+   <!--Function-->
+   function myFunction(p1, p2) {
+  return p1 * p2;   // The function returns the product of p1 and p2
+}
+  <!--Array-->
+   var cars = ["Saab", "Volvo", "BMW"];
+   
+   <!-- Conditional logic-->
+   if (time < 10) {
+  greeting = "Wake up";
+} else if (time < 20) {
+  greeting = "Good day";
+} else {
+  greeting = "Go to bed";
+}
+  <!--Loop-->
+   var cars = ["BMW", "Volvo", "Saab", "Ford"];
+var i = 0;
+var text = "";
+
+for (;cars[i];) {
+  text += cars[i] + "<br>";
+  i++;
+}
+   
+  
+  
+  
+  </div>
+  </div>
+ 
 <!--This is where Xinyu's work ends. :)-->
 
 
