--- a/index.html
+++ b/index.html
@@ -685,9 +685,10 @@ But, I'm sentimental. So, I'm keeping it in here.-->
   <div class="col">
    <h1 style="color:Violet;">Javascript</h1>
  
+   <script>
    <!--Function-->
    function myFunction(p1, p2) {
-  return p1 * p2;   // The function returns the product of p1 and p2
+  return p1 * p2;   
 }
   <!--Array-->
    var cars = ["Saab", "Volvo", "BMW"];
@@ -712,7 +713,7 @@ for (;cars[i];) {
    
   
   
-  
+  </script>
   </div>
   </div>
  
