--- a/index.html
+++ b/index.html
@@ -686,14 +686,14 @@ But, I'm sentimental. So, I'm keeping it in here.-->
    <h1 style="color:Violet;">Javascript</h1>
  
    <script>
-   <!--Function-->
+   /*Function-->*/
    function myFunction(p1, p2) {
   return p1 * p2;   
 }
-  <!--Array-->
+  /*Array*/
    var cars = ["Saab", "Volvo", "BMW"];
    
-   <!-- Conditional logic-->
+  /* Conditional logic*/
    if (time < 10) {
   greeting = "Wake up";
 } else if (time < 20) {
@@ -701,7 +701,7 @@ But, I'm sentimental. So, I'm keeping it in here.-->
 } else {
   greeting = "Go to bed";
 }
-  <!--Loop-->
+  /*Loop*/
    var cars = ["BMW", "Volvo", "Saab", "Ford"];
 var i = 0;
 var text = "";
