--- a/index.html
+++ b/index.html
@@ -716,6 +716,16 @@ for (;cars[i];) {
   </script>
   </div>
   </div>
+ <button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
+
+<img id="myImage" src="pic_bulboff.gif" style="width:100px">
+
+<button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+
+</body>
+</html>
+
+
  
 <!--This is where Xinyu's work ends. :)-->
 
