--- a/index.html
+++ b/index.html
@@ -685,32 +685,22 @@ But, I'm sentimental. So, I'm keeping it in here.-->
   <div class="col">
    <h1 style="color:Violet;">Javascript</h1>
  
-    <!--Interaction-->
-   if (time < 10) {
+    <!--Conditional logic-->
+   <button onclick="What should I Do()">greeting.</button>
+   
+   <script>
+    /*Conditional*/
+    if (time < 10) {
   greeting = "Wake up";
 } else if (time < 20) {
-  greeting = "Good day";
+  greeting = "eat";
 } else {
   greeting = "Go to bed";
 }
-   <script>
-   /*Function-->*/
-   function myFunction(p1, p2) {
-  return p1 * p2;   
-}
-  /*Array*/
-   var cars = ["Saab", "Volvo", "BMW"];
+   
    
 
-  /*Loop*/
-   var cars = ["BMW", "Volvo", "Saab", "Ford"];
-var i = 0;
-var text = "";
-
-for (;cars[i];) {
-  text += cars[i] + "<br>";
-  i++;
-}
+  
    
   
   
