--- a/index.html
+++ b/index.html
@@ -686,9 +686,11 @@ But, I'm sentimental. So, I'm keeping it in here.-->
    <h1 style="color:Violet;">Javascript</h1>
  
     <!--Conditional logic-->
+   <html>
+<body>
    <p>Click the button to get a time-based greeting:</p>
 
-<button onclick="myFunction()">Try it</button>
+<button onclick="myFunction()">Hey</button>
 
 <p id="demo"></p>
 
@@ -706,37 +708,12 @@ function myFunction() {
   document.getElementById("demo").innerHTML = greeting;
 }
 </script>
-   
+ </body>
+</html>  
 <!--Loop-->  
    <p id="demo"></p>
 
-<script>
-var cars = ["BMW", "Volvo", "Saab", "Ford", "Fiat", "Audi"];
-var text = "";
-var i;
-for (i = 0; i < cars.length; i++) {
-  text += cars[i] + "<br>";
-}
-document.getElementById("demo").innerHTML = text;
-</script>
 
-   <!--Arrays-->   
-<p id="demo"></p>
-
-<script>
-var cars = ["Saab", "Volvo", "BMW"];
-document.getElementById("demo").innerHTML = cars;
-</script>   
-
-<!--Function-->
-<p id="demo"></p>
-
-<script>
-function myFunction(p1, p2) {
-  return p1 * p2;
-}
-document.getElementById("demo").innerHTML = myFunction(5, 8);
-</script>
    
    
 
@@ -748,8 +725,7 @@ document.getElementById("demo").innerHTML = myFunction(5, 8);
   </div>
   </div>
  
-</body>
-</html>
+
 
 
  
